# suiwallpaper-desktop

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: CMakeLists.txt  inc.hpp  lines.cpp  lines.hpp  lodepng.cpp  lodepng.h  main.cpp  reparent-win.cpp  reparent-x11.cpp  reparent.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
src/shaders/: circle.h  linelong.h  tex.h
